--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,57 @@
-python==3.8.5
-django==3.1.1
+altgraph==0.17
+asgiref==3.2.10
+astroid==2.4.2
+bleach==3.2.1
+bs4==0.0.1
+cachetools==4.1.1
+certifi==2020.6.20
+chardet==3.0.4
+colorama==0.4.3
+cycler==0.10.0
+Django==3.1.1
+django-extensions==3.1.0
+django-markdownify==0.8.1
+future==0.18.2
+google-api-core==1.22.1
+google-api-python-client==1.10.0
+google-auth==1.20.1
+google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.1
+googleapis-common-protos==1.52.0
+gunicorn==20.0.4
+httplib2==0.18.1
+idna==2.10
+isort==5.5.2
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+lxml==4.6.1
+Markdown==3.2.2
+markdown2==2.3.9
+mccabe==0.6.1
+mpmath==1.1.0
+numpy==1.19.3
+oauthlib==3.1.0
+packaging==20.4
+pefile==2019.4.18
+Pillow==8.0.1
+protobuf==3.13.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyInstaller==3.6
+pylint==2.6.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+pywin32-ctypes==0.2.0
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
 selenium==3.141.0
-chromedriver
-chrome
+six==1.15.0
+soupsieve==2.0.1
+sqlparse==0.3.1
+toml==0.10.1
+uritemplate==3.0.1
+urllib3==1.25.10
+webencodings==0.5.1
+wrapt==1.12.1
