--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ certifi==2020.6.20
 chardet==3.0.4
 colorama==0.4.3
 cycler==0.10.0
+dj-database-url==0.5.0
 Django==3.1.1
 django-extensions==3.1.0
+django-heroku==0.3.1
 django-markdownify==0.8.1
 future==0.18.2
 google-api-core==1.22.1
@@ -22,19 +24,23 @@ gunicorn==20.0.4
 httplib2==0.18.1
 idna==2.10
 isort==5.5.2
+keyboard==0.13.5
 kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
 lxml==4.6.1
 Markdown==3.2.2
 markdown2==2.3.9
+matplotlib==3.3.3
 mccabe==0.6.1
 mpmath==1.1.0
 numpy==1.19.3
 oauthlib==3.1.0
 packaging==20.4
+pandas==1.1.4
 pefile==2019.4.18
 Pillow==8.0.1
 protobuf==3.13.0
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyInstaller==3.6
@@ -54,4 +60,5 @@ toml==0.10.1
 uritemplate==3.0.1
 urllib3==1.25.10
 webencodings==0.5.1
+whitenoise==5.2.0
 wrapt==1.12.1
